--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   "use strict";
 
   // --- Configuration ---
-  const SVG_PATH_TO_LOAD = './svg/11-52.svg'; // Path to your SVG file
+  const SVG_PATH_TO_LOAD = 'https://github.com/osvetlimrak/osvetlimrak.github.io/blob/764f9314901681a6598560e55ced4c86e25a2ecb/svg/11-52.svg'; // Path to your SVG file
 
   // Globals & constants
   const POINT_MARKER_OPTIONS = {
