--- a/index.html
+++ b/index.html
@@ -465,6 +465,7 @@
   // 🔟 Export Functionality (KML only - buildDataForKML, exportKML - no changes)
     // Function to build data structure for KML (simpler than full GeoJSON if only for KML)
     // Function to build data structure for KML (MODIFIED for desired description)
+    // Function to build data structure for KML (MODIFIED for desired description)
   function buildDataForKML() {
     if (!generatedPoints || generatedPoints.length === 0) { return null; }
     if (!svgGroup) { return null; }
@@ -485,6 +486,18 @@
                 geometry: {
                     type: "Point",
                     coordinates: [latLng.lng, latLng.lat]
+                }
+                // We no longer need the nested 'properties' object for this simple KML structure,
+                // unless you specifically want the <ExtendedData> tags as well.
+                // If you DON'T want <ExtendedData>, remove the 'properties' block below.
+                /*
+                properties: {
+                    index: index + 1,
+                    sourceIndex: point.sourceIndex,
+                    sourceId: point.sourceId,
+                    sourceTag: point.sourceTag
+                }
+                */
             };
             features.push(feature);
         }
