--- a/index.html
+++ b/index.html
@@ -492,11 +492,48 @@
 }
 
 function exportKML() {
-  const geojson = buildDataForKML();
-  if (!geojson) {
+  if (!generatedPoints || generatedPoints.length === 0) {
     alert("No point data to export.");
     return;
   }
+
+  // --- Build a minimal, My Maps-friendly KML string ---
+  let kml = `<?xml version="1.0" encoding="UTF-8"?>\n` +
+            `<kml xmlns="http://www.opengis.net/kml/2.2">\n` +
+            `  <Document>\n` +
+            `    <name>SVG Points</name>\n`;
+
+  generatedPoints.forEach((pt, i) => {
+    const ll = _getTransformedLatLng(pt);
+    if (!ll) return;
+    // i+1 → your point number
+    kml +=
+      `    <Placemark>\n` +
+      `      <name>${i + 1}</name>\n` +
+      `      <Point>\n` +
+      `        <coordinates>${ll.lng},${ll.lat},0</coordinates>\n` +
+      `      </Point>\n` +
+      `    </Placemark>\n`;
+  });
+
+  kml +=
+            `  </Document>\n` +
+            `</kml>`;
+
+  // --- Download it ---
+  const blob = new Blob([kml], { type: "application/vnd.google-earth.kml+xml" });
+  const url  = URL.createObjectURL(blob);
+  const a    = document.createElement("a");
+  a.href     = url;
+  a.download = "svg_points.kml";
+  document.body.appendChild(a);
+  a.click();
+  document.body.removeChild(a);
+  URL.revokeObjectURL(url);
+
+  console.log("Exported KML with numbered <name> tags.");
+}
+
 
   // Tell tokml to use each feature’s "name" property for the KML <name>
   const kmlString = tokml(geojson, {
